--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -118,9 +118,13 @@ div.map-turn-marker {
 
 /** this is the easyBar component, that contains a collection of buttons */
 .easy-button-container {
-  width:20px; // to force buttons to be displayed vertically
+  padding-right:30px;
+  width:16px; // to force buttons to be displayed vertically
   box-shadow: 0 1px 5px rgba(0,0,0,0.65);
   border-radius: 4px;
+}
+.easy-button-container .easy-button-button {
+  line-height: 1.65;
 }
 /** we can't easily control the classes for easyButtons, but we can control
   enabled/disabled.  Use this as a status to let us highlight the current one */
