--- a/packages/client/src/Components/Mapping/components/OrdersPanel/styles.scss
+++ b/packages/client/src/Components/Mapping/components/OrdersPanel/styles.scss
@@ -17,11 +17,20 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
+    text-transform: uppercase;
   }
+
+
 
   &__title {
     font-weight: bold;
     margin-right: .5em;
+  }
+  
+  &__subtitle {
+    font-weight: bold;
+    font-size: .8rem;
+    margin-bottom: 0.5rem;
   }
 
   &__actions {
@@ -42,7 +51,7 @@
     border: 1px solid #5F5F60;
     padding: 2px;
     cursor: pointer;
-
+    
     &::after,
     &::before {
       content: "";
@@ -52,24 +61,24 @@
       transform-origin: center;
       box-shadow: 0 0 0 .8px #5F5F60;
       margin: 0 auto;
-      transform: rotate(90deg);
       transition: all 100ms linear;
     }
 
     &::after {
       margin-top: -100%;
     }
+    &::before {
+      transform: rotate(90deg);
+    }
 
     &--active {
-      &::before {
-        transform: rotate(0);
+      &::before,
+      &::after {
+        transform: rotate(90deg);
       }
     }
   }
 
-  &__content {
-
-  }
 
   &__footer {
     button {
@@ -82,10 +91,29 @@
     }
   }
 
-  &__list {
-    margin: 10px 0;
+  &__content {
+    margin: 1.5rem 0 1rem;
     max-height: 520px;
-    overflow-y: auto;
+    overflow-y: auto;   
+
+    &.force-is-visible {
+      max-height: 1000;
+      transition: max-height 350ms linear;
+    }
+    &.force-is-hidden {
+      max-height: 0px;
+      overflow:hidden;
+    }
+  }
+
+  &__forces-list {
+    li {
+      padding-bottom: .5rem;
+    }
+    .orders-panel__toggler {
+      float: left;
+      margin-right: .5rem;
+    }
   }
 
   &__asset {
@@ -107,12 +135,14 @@
   }
 
   &__description {
-    padding-bottom: 4px;
     width: 100%;
+    .fa-check-circle {
+      position: absolute;
+      right: 0;
+    }
   }
 
   &__name {
-    font-weight: bold;
     line-height: 1;
     margin-bottom: 2px;
   }
@@ -122,4 +152,14 @@
     line-height: 1;
     font-size: 10px;
   }
+
+  &__content {
+    max-height: 1000px;
+    transition: max-height 250ms ease-in-out;
+    &.is-hidden {
+      max-height: 0px;
+      overflow:hidden;
+    }
+  }
 }
+
