--- a/packages/client/src/Components/Mapping/components/OrdersPanel/styles.scss
+++ b/packages/client/src/Components/Mapping/components/OrdersPanel/styles.scss
@@ -1,3 +1,6 @@
+
+$ordersMaxHeight: 520px;
+
 .orders-panel {
   position: absolute;
   left: 20px;
@@ -6,12 +9,12 @@
   background-color: rgba(255,255,255,.8);
   color: #5F5F60;
   z-index: 410; //map z-index = 399
-  padding: .5em .7em;
+  padding: .5em .7em 1rem;
   font-size: 14px;
   min-width: 260px;
   border-radius: 4px;
   max-height: 95%;
-
+  
   &__header {
     display: flex;
     flex-wrap: nowrap;
@@ -90,14 +93,13 @@
       padding: 4px 14px;
     }
   }
-
+ 
   &__content {
     margin: 1.5rem 0 1rem;
-    max-height: 520px;
+    max-height: $ordersMaxHeight;
     overflow-y: auto;   
 
     &.force-is-visible {
-      max-height: 1000;
       transition: max-height 350ms linear;
     }
     &.force-is-hidden {
@@ -153,13 +155,30 @@
     font-size: 10px;
   }
 
-  &__content {
-    max-height: 1000px;
-    transition: max-height 250ms ease-in-out;
-    &.is-hidden {
-      max-height: 0px;
-      overflow:hidden;
-    }
-  }
+
 }
 
+/* Some components use a slide-in-out animation, this is the CSS for that */
+
+.slideorders-enter,
+.slideorders-leave {
+    overflow: hidden;
+}
+
+.slideorders-enter {
+    max-height: 0;
+  }
+  
+.slideorders-enter.slideorders-enter-active {
+    transition: max-height 500ms ease-in-out;
+    max-height: $ordersMaxHeight;
+}
+
+.slideorders-leave {
+    max-height: $ordersMaxHeight;
+}
+
+.slideorders-leave.slideorders-leave-active {
+    transition: max-height 200ms ease-in-out;
+    max-height: 0;
+}
