--- a/packages/themes/_flex-layout.scss
+++ b/packages/themes/_flex-layout.scss
@@ -5,10 +5,10 @@
 }
 
 .flex-content-wrapper {
+  align-items: flex-start;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  align-items: flex-start;
 
   &--welcome {
     height: 100vh;
@@ -20,15 +20,15 @@
   }
 
   &--distribute {
-    justify-content: space-between;
     flex-grow: 0;
+    justify-content: space-between;
   }
 
   #root > & {
-    height: 100%;
-    background-image: url("dependencies/images/tile.png");
     background-blend-mode: lighten;
-    background-color: $backgroundBody;
+    background-color: $background-body;
+    background-image: url("dependencies/images/tile.png");
+    height: 100%;
   }
 
   .flex-content {
@@ -39,9 +39,9 @@
     min-width: 25%;
 
     &--welcome {
-      width: 100%;
       height: 100vh;
       justify-content: center;
+      width: 100%;
 
       .btn-action--primary {
         margin-top: 16px;
@@ -66,8 +66,8 @@
     }
 
     &--center {
-      width: 25%;
       align-self: center;
+      width: 25%;
     }
 
     &--sml {
@@ -80,8 +80,8 @@
     }
 
     &--big {
-      min-width: 45%;
       margin: 0 2.5%;
+      min-width: 45%;
     }
 
     &--first {
@@ -92,25 +92,25 @@
     }
 
     &--left50 {
-      min-width: 47.5%;
       margin-right: 2.5%;
+      min-width: 47.5%;
     }
 
     &--right50 {
-      min-width: 47.5%;
       margin-left: 2.5%;
+      min-width: 47.5%;
     }
 
     &--solo-item {
-      min-width: 55%;
       margin: 0 auto;
+      min-width: 55%;
     }
 
     &--main-menu {
       a {
         font-size: 2em;
-        text-decoration: underline;
         margin-top: 2em;
+        text-decoration: underline;
 
         &:first-of-type {
           margin-top: 0;
@@ -126,6 +126,6 @@
   .flex-landing-screen,
   .flex-transparent,
   .force-objectives {
-    color: #ffffff;
+    color: #fff;
   }
 }
