--- a/packages/themes/_message-preview.scss
+++ b/packages/themes/_message-preview.scss
@@ -1,8 +1,8 @@
 @import "dependencies/variables";
 
 .message-preview {
-  padding: 16px 8px 0 8px;
   margin-bottom: 12px;
+  padding: 16px 8px 0;
 
   h3 {
     font-size: 1.4em;
@@ -14,6 +14,6 @@
   }
 
   &:nth-of-type(even) {
-    background: $lightGrey;
+    background: $light-grey;
   }
 }
