--- a/packages/themes/_preview-editor.scss
+++ b/packages/themes/_preview-editor.scss
@@ -3,7 +3,7 @@
 #preview {
   #preview-editor {
     h3 {
-      padding-bottom: $umpireMenuMargin;
+      padding-bottom: $umpire-menu-margin;
     }
   }
 }
