--- a/packages/themes/_searchlist.scss
+++ b/packages/themes/_searchlist.scss
@@ -10,8 +10,8 @@
   margin-top: 1.2em;
 
   &-input {
-    width: 100%;
     padding: 0.45em;
+    width: 100%;
   }
 
   &-list {
@@ -24,33 +24,33 @@
 
     .list-title,
     .searchlist-title {
-      position: relative;
-      display: flex;
       align-items: center;
-      width: 100%;
-      padding: 1em 0.45em;
       border-bottom: 1px solid #f2f2f2;
-      margin-bottom: 0 !important;
       cursor: pointer;
+      display: flex;
+      margin-bottom: 0 !important;
+      padding: 1em 0.45em;
+      position: relative;
+      width: 100%;
 
       &:hover {
-        color: $darkGrey;
+        color: $dark-grey;
         text-decoration: none;
       }
 
       &.active {
-        color: $darkGrey;
+        background: #fff;
+        color: $dark-grey;
         font-weight: bold;
-        background: #ffffff;
       }
     }
   }
 
   svg {
     display: inline-flex;
-    opacity: 0.7;
     font-size: 0.9em;
     margin-left: 15px;
+    opacity: 0.7;
 
     &:first-child {
       margin-left: 20px;
@@ -67,8 +67,8 @@
   margin-top: 1.2em;
 
   &-input {
-    width: 100%;
     padding: 0.45em;
+    width: 100%;
   }
 
   .searchlist-list {
@@ -82,69 +82,69 @@
 
     .list-title,
     .searchlist-title {
-      position: relative;
-      display: flex;
       align-items: center;
-      width: 100%;
-      padding: 1em 0.45em;
       border-bottom: 1px solid #f2f2f2;
+      display: flex;
       margin-bottom: 0 !important;
+      padding: 1em 0.45em;
+      position: relative;
+      width: 100%;
 
       span {
-        margin-bottom: 0 !important;
         cursor: pointer;
+        margin-bottom: 0 !important;
       }
 
       &:hover {
-        color: $darkGrey;
+        color: $dark-grey;
         text-decoration: none;
       }
 
       &.active {
-        color: $darkGrey;
+        background: #fff;
+        color: $dark-grey;
         font-weight: bold;
-        background: #ffffff;
       }
 
       .wargame-started-highlight {
-        display: inline-flex;
-        width: 20px;
-        height: 20px;
         background: green;
         border-radius: 100%;
+        display: inline-flex;
+        height: 20px;
         margin-right: 15px;
+        width: 20px;
       }
 
       .wargame-unstarted-highlight {
-        display: inline-flex;
-        width: 20px;
-        height: 20px;
         background: orange;
         border-radius: 100%;
+        display: inline-flex;
+        height: 20px;
         margin-right: 15px;
+        width: 20px;
       }
 
       .wargame-option-menu-btn {
+        cursor: pointer;
         margin: 0 8px;
         margin-left: auto;
-        cursor: pointer;
       }
 
       .wargame-option-menu {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        top: 2.25em;
-        right: 6px;
-        width: 160px;
-        height: auto;
-        z-index: 3;
         background: white;
         border: 1px solid $grey;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        position: absolute;
+        right: 6px;
+        top: 2.25em;
+        width: 160px;
+        z-index: 3;
 
         span {
-          display: flex;
           align-items: center;
+          display: flex;
 
           svg {
             margin-right: 6px;
@@ -154,12 +154,12 @@
       }
 
       .wargame-option-menu-bg {
-        position: fixed;
         display: flex;
-        width: 100%;
         height: 100%;
-        top: 0;
         left: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
         z-index: 2;
       }
     }
@@ -167,9 +167,9 @@
 
   svg {
     display: inline-flex;
-    opacity: 0.7;
     font-size: 0.9em;
     margin-left: 15px;
+    opacity: 0.7;
 
     &:first-child {
       margin-left: 12px;
