--- a/packages/themes/_turnProgresion.scss
+++ b/packages/themes/_turnProgresion.scss
@@ -1,34 +1,34 @@
 @import "dependencies/variables";
 
 .wargame-title {
-  flex-grow: 0;
-  justify-content: space-between !important;
   align-items: center;
   flex-direction: row !important;
-  padding: $umpireMenuMargin;
+  flex-grow: 0;
+  justify-content: space-between !important;
+  padding: $umpire-menu-margin;
 
   h3 {
-    width: fit-content;
-    color: $adminColor;
+    @include typo-primary;
+    color: $admin-color;
     font-size: 20px;
     font-weight: 600;
     text-transform: uppercase;
-    @include typo-primary;
+    width: fit-content;
   }
 
   svg {
+    color: $primary-triad-color;
     cursor: pointer;
-    color: $primaryTriadColor;
   }
 }
 
 .wargame-title-icon {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
   background-image: url("dependencies/images/chat-blue@2x.png");
-  background-size: 20px 20px;
   background-position: center;
+  background-size: 20px 20px;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
 }
 
 .turn-info-phase {
@@ -39,33 +39,33 @@
   }
 
   h5 {
-    color: $actionSecondaryColor;
+    color: $action-secondary-color;
     font-size: 14px;
     font-weight: 700;
   }
 
   time {
+    display: inline-block;
+    font-family: "Open Sans", "sans-serif";
     font-size: 12px;
     font-weight: 600;
-    font-family: "Open Sans", "sans-serif";
-    display: inline-block;
     padding-top: 8px;
   }
 }
 
 .turn-info-remaining {
   .time-left {
+    color: #fff;
     font-size: 22px;
     font-weight: 600;
-    color: #ffffff;
     line-height: 1;
   }
 
   .info-helper {
-    font-size: 10px;
-    font-weight: 600;
     color: rgba(255, 255, 255, 0.4);
     display: block;
+    font-size: 10px;
+    font-weight: 600;
   }
 
   .info-phase-label {
@@ -75,21 +75,21 @@
 }
 
 .turn-progression-ui {
-  background: $backgroundProgression;
-  color: #ffffff;
+  background: $background-progression;
+  border-radius: 4px;
+  color: #fff;
   flex-grow: 0;
   justify-content: space-between;
-  padding: $umpireMenuMargin;
-  margin: $umpireMenuMargin;
+  margin: $umpire-menu-margin;
   margin-top: 0;
-  border-radius: 4px;
+  padding: $umpire-menu-margin;
 
   &.adjunction-phase {
     background: $grey;
   }
 
   .ended {
-    &:before {
+    &::before {
       content: "-";
     }
   }
@@ -100,16 +100,16 @@
 
   @keyframes blink {
     49% {
-      color: $lightBlue;
+      color: $light-blue;
     }
     50% {
-      color: $primaryTriadColor;
+      color: $primary-triad-color;
     }
     99% {
-      color: $primaryTriadColor;
+      color: $primary-triad-color;
     }
     100% {
-      color: $lightBlue;
+      color: $light-blue;
     }
   }
 }
