--- a/packages/themes/_typography.scss
+++ b/packages/themes/_typography.scss
@@ -30,28 +30,28 @@ a {
 }
 
 h1 {
+  margin-bottom: $umpire-menu-margin;
   width: fit-content;
-  margin-bottom: $umpireMenuMargin;
 }
 
 h4 {
-  width: fit-content;
-  padding: 12px 0;
   cursor: pointer;
+  padding: 12px 0;
+  width: fit-content;
 }
 
 a {
-  color: $linkColor;
+  color: $link-color;
   width: fit-content;
 
   &:hover {
-    color: $secondaryColor;
+    color: $secondary-color;
   }
 }
 
 .heading {
   &--sml {
-    color: $darkGrey;
+    color: $dark-grey;
     font-weight: bold;
     margin-bottom: 0;
   }
@@ -62,14 +62,14 @@ a {
 }
 
 .group-item {
-  display: inline-flex;
-  width: fit-content;
-  color: $darkGrey;
-  padding: 8px;
-  background: $primaryTriadColorTransparent;
   align-items: center;
+  background: $primary-triad-color-transparent;
+  color: $dark-grey;
+  display: inline-flex;
   line-height: 0;
   margin-top: 12px;
+  padding: 8px;
+  width: fit-content;
 
   svg {
     margin-left: 5px;
