--- a/packages/themes/demo.scss
+++ b/packages/themes/demo.scss
@@ -2,9 +2,9 @@
 
 .demo-content-wrapper {
   #umpire {
-    width: 48vw;
     height: auto;
-    padding: 5vh 0 5vh 0;
+    padding: 5vh 0;
+    width: 48vw;
 
     &.flex-landing-screen,
     &.flex-jc-center {
@@ -18,9 +18,9 @@
 
   #sidebar_admin,
   #sidebar {
-    width: 10vw;
     height: 100%;
     position: absolute;
+    width: 10vw;
 
     .link,
     .link--active {
@@ -38,8 +38,8 @@
   }
 
   .view-wrapper-gamesetup {
-    padding: 0 0 6vh 5vw;
     min-height: 45vh;
+    padding: 0 0 6vh 5vw;
   }
 
   .welcome-page {
@@ -51,8 +51,8 @@
   }
 
   .serge-custom-logo {
-    max-width: 150px;
     margin-bottom: 30px;
+    max-width: 150px;
   }
 
   input[name="force-name"] {
@@ -70,8 +70,8 @@
 
   .contain-message-templates,
   .contain-message-library {
-    width: 75%;
     align-self: flex-end;
+    width: 75%;
   }
 
   .searchlist-list {
@@ -97,9 +97,9 @@
   }
 
   .contain-welcome-screen {
-    width: 75%;
-    display: flex;
     align-items: center;
+    display: flex;
+    width: 75%;
   }
 
   .flex-content-wrapper--welcome,
@@ -114,10 +114,10 @@
 
   .flex-content--welcome {
     .has-demo-passwords {
+      align-self: flex-start;
+      padding-left: 22vw;
       position: relative;
       width: 75%;
-      padding-left: 22vw;
-      align-self: flex-start;
     }
 
     .demo-passwords {
@@ -126,8 +126,8 @@
   }
 
   .serge-logo {
-    width: 150px;
     margin-right: 50px;
+    width: 150px;
   }
 
   .game-designer-action {
@@ -164,7 +164,7 @@
 }
 
 .demo-list-forces {
+  margin-top: 25px;
   max-height: 45vh;
   overflow: auto;
-  margin-top: 25px;
 }
