--- a/packages/themes/dependencies/_reset.scss
+++ b/packages/themes/dependencies/_reset.scss
@@ -84,11 +84,11 @@ time,
 mark,
 audio,
 video {
+  border: 0;
+  font-family: inherit;
+  font-size: 100%;
   margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font-family: inherit;
   vertical-align: baseline;
 }
 
@@ -123,16 +123,16 @@ q {
 }
 
 blockquote {
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     content: "";
     content: none;
   }
 }
 
 q {
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     content: "";
     content: none;
   }
