--- a/packages/themes/dependencies/flexlayout-react.scss
+++ b/packages/themes/dependencies/flexlayout-react.scss
@@ -117,7 +117,7 @@
   font-size: 12px;
   font-weight: bold;
   text-align: center;
-  color: $linkColor;
+  color: $link-color;
   @include typo-secondary;
 }
 
@@ -131,7 +131,7 @@
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
 
   .out-of-game-feed & {
-    background-color: $backgroundActionHead;
+    background-color: $background-action-head;
     box-shadow: none;
     border-image-source: none;
     border: none;
