--- a/packages/themes/App.scss
+++ b/packages/themes/App.scss
@@ -54,7 +54,7 @@
   }
 }
 
-#loading {
+.loading {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -66,7 +66,7 @@
     max-width: 45%;
   }
 
-  #loader {
+  .loader {
     border-radius: 100%;
     height: 100px;
     left: 50%;
@@ -74,6 +74,17 @@
     position: absolute;
     top: 50%;
     width: 100px;
+
+    &::before {
+      animation: flip 1s infinite;
+      background-color: $link-color;
+      content: "";
+      height: 50px;
+      left: 25px;
+      position: absolute;
+      top: 25px;
+      width: 50px;
+    }
   }
 
   h1 {
@@ -82,17 +93,6 @@
     margin-top: 215px;
     text-align: center;
     width: 100%;
-  }
-
-  #loader::before {
-    animation: flip 1s infinite;
-    background-color: $link-color;
-    content: "";
-    height: 50px;
-    left: 25px;
-    position: absolute;
-    top: 25px;
-    width: 50px;
   }
 
   @keyframes flip {
