- Fix flex-layout style lint issues - Add SUIT CSS selector pattern

--- a/packages/themes/_flex-layout.scss
+++ b/packages/themes/_flex-layout.scss
@@ -111,10 +111,10 @@
         font-size: 2em;
         margin-top: 2em;
         text-decoration: underline;
+      }
 
-        &:first-of-type {
-          margin-top: 0;
-        }
+      a:first-of-type {
+        margin-top: 0;
       }
     }
   }
