--- a/packages/themes/_forms.scss
+++ b/packages/themes/_forms.scss
@@ -15,7 +15,7 @@
 .form-group {
   margin-bottom: 0;
 
-  & + .form-group {
+  + .form-group {
     margin-top: 16px;
   }
 
@@ -36,7 +36,7 @@
   .new-message-creator & {
     @include field-shadow;
     background-color: $background-field;
-    border: none;
+    border: 0;
     color: rgba(255, 255, 255, 0.8);
 
     &:focus {
@@ -45,13 +45,8 @@
       color: rgba(255, 255, 255, 0.8);
     }
 
-    &::-webkit-input-placeholder,
-    &::-moz-placeholder,
-    &:-moz-placeholder,
-    &:-ms-input-placeholder {
-      .new-message-creator & {
-        color: rgba(255, 255, 255, 0.2);
-      }
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.2);
     }
   }
 
